# python-statuscake-api

./: .gitignore  README.rst  setup.cfg
tests/: test_client.py  test_config.py
tests/fixtures/: custom_statuscake.conf  etc_statuscake.conf  home_statuscake.conf  pwd_statuscake.conf
