[metadata]
name = statuscake-api
description = "Statuscake API v1 wrapper"
long_description = file: README.rst
version = 0.1.1
author = Anthony Martinet
author_email = anthony@alkivi.fr
url = https://github.com/alkivi-sas/python-statuscake-api
license = LGPL
license_file = LICENSE
keywords = statuscake, sdk, rest
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
    requests
setup_requires =
    setuptools>=30.3.0
include_package_data = True

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1
